# BoxToCoords-Node

./: CMakeLists.txt  README.md  package.xml
scripts/: boxToCoords.py  test.py
